<resources>
    <string name="app_name">Inventory App</string>

    <string name="category_overview">Overview</string>

    <string name="product_name">Name</string>

    <string name="quantity_product">Quantity</string>

    <string name="provider_name_product">Provider name</string>

    <string name="in_stock_text">In stock</string>

    <string name="price_product">Price</string>

    <string name="category_orders">Orders</string>

    <string name="order_text">Order</string>

    <string name="sending_text">Sending</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="editor_activity_title_new_product">Add a new product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="product_yes_stock">YES</string>

    <string name="product_not_stock">NOT</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_insert_failed">Error with saving product</string>

    <string name="editor_insert_success">Product saved!</string>

    <string name="editor_update_failed">Error with updating product</string>

    <string name="editor_update_success">Product Updated!</string>

    <string name="label_price">Price:</string>

    <string name="label_stock">In stock</string>

    <string name="label_quantity">Quantity:</string>

    <string name="error_permission_galery">Error with permission access file location!</string>

    <string name="category_data">Information: </string>

    <string name="provider_email">Provider email</string>

    <string name="less_button">-</string>

    <string name="quantity_value">0</string>

    <string name="more_button">+</string>

    <string name="order_editor_activity_title">Edit order</string>

    <string name="shipping_editor_activity_title">Edit shipping</string>

    <string name="limit_product_less">You cannot have less that 1 product</string>

    <string name="msg_error_provider_email">Please provide an email!</string>

    <string name="msg_error_email">Error Unknown</string>

    <string name="client_email">Client email</string>

    <string name="msg_subject">Product request</string>

    <string name="empty_view_title_text">You\'ve no inventory yet!</string>

    <string name="empty_view_subtitle_text">Let us begin</string>
    <string name="sale_text">Sale</string>
    <string name="editor_buy_product">Buy more product!</string>

</resources>
