<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.deltarios.android.inventoryapp.OrderEditorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="@dimen/activity_margin"
        android:text="@string/category_data"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_product_name_order"
        style="@style/EditorFieldStyle"
        android:hint="@string/product_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_provider_email"
        style="@style/EditorFieldStyle"
        android:hint="@string/provider_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="@dimen/activity_margin"
        android:text="@string/quantity"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:hint="@string/less_button" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/quantity_value"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:hint="@string/more_button" />
    </LinearLayout>

    <ImageView
        android:id="@+id/product_image_view_order_editor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btn_submit_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/order_text"/>

</LinearLayout>
