<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <ImageView
        android:id="@+id/product_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

            <!-- Label field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:ems="1000"
                android:hint="@string/quantity_product"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/edit_price_product"
                style="@style/EditorFieldStyle"
                android:hint="@string/price_product"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/edit_provider_product"
                style="@style/EditorFieldStyle"
                android:hint="@string/provider_name_product"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_stock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/in_stock_text" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <!-- Stock drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_stock"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/sale_text"/>
</LinearLayout>