<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:id="@+id/product_image_list_view"
        android:src="@mipmap/ic_launcher"
        android:layout_width="@dimen/list_item_height"
        android:layout_height="@dimen/list_item_height"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/list_item_height"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_margin">

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:text="Hola"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="#212121"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/label_price"
                        android:textSize="12sp"
                        android:textColor="#AEB6BD"/>

                    <TextView
                        android:id="@+id/price_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="123"
                        android:textSize="16sp"
                        android:textColor="#757575"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/label_quantity"
                        android:textSize="12sp"
                        android:textColor="#AEB6BD"/>

                    <TextView
                        android:id="@+id/quantity_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="123"
                        android:textSize="16sp"
                        android:textColor="#757575"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/label_stock"
                        android:textSize="12sp"
                        android:textColor="#AEB6BD"/>

                    <TextView
                        android:id="@+id/stock_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="YES"
                        android:textSize="16sp"
                        android:textColor="#757575"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>